# PollEncOuNt

./: README.md  data.yaml  pyproject.toml  requirements.txt
example/: count_result.csv
src/: gui.py
src/peon/: __init__.py  predict.py  train.py
src/peon_gui/: gui.py
src/plc/: __init__.py  predict.py  train.py
