[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plc"
version = "0.0.1"
authors = [
  { name="Shan-En Chen", email="shawn.for.office@gmail.com" },
]
description = "Pollen Detection"
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[tool.setuptools.packages.find]
where = ["src"]  # ["."] by default
include = ["*"]  # ["*"] by defaultgit 
## cause it trigger error, i disable it before i fixed it.
## Getting requirements to build editable ... error ...
# addopts = [
#     "--import-mode=importlib",
# ]