[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "peon"
version = "1.0.0"
authors = [
  { name="Shan-En Chen", email="shawn.for.office@gmail.com" },
]
description = "PollEncOuNt: The purpose of this project is to count the number of alive and dead pollens in an image."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
peon = "gui:main"

[tool.setuptools.packages.find]
where = ["src"]  # ["."] by default
include = ["*"]  # ["*"] by defaultgit 
## cause it trigger error, i disable it before i fixed it.
## Getting requirements to build editable ... error ...
# addopts = [
#     "--import-mode=importlib",
# ]